# gemini-pm-market-making

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a2b614f8a40_initial_schema.py  328e8391fe77_add_performative_market_making_tables.py
backend/src/: config.py  main.py
backend/src/api/: router.py  ws.py
backend/src/db/: database.py  models.py
backend/src/engine/: book.py  loop.py  optimizer.py  orders.py  performative.py  positions.py  quoting.py  risk.py  scanner.py  xi.py
backend/src/gemini/: auth.py  client.py  models.py
backend/tests/api/: test_router_performative.py
backend/tests/engine/: test_book.py  test_loop.py  test_optimizer.py  test_orders.py  test_performative.py  test_positions.py  test_quoting.py  test_risk.py  test_scanner.py  test_xi.py
docs/plans/: 2026-03-26-avellaneda-stoikov-market-maker-design.md
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActivityLog.tsx  InventoryHeatmap.tsx  PnlChart.tsx  ReservationPriceChart.tsx  StatusBar.test.tsx  StatusBar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: types.ts
specs/: constitution.md
specs/001-performative-market-making/: contract.md  data-model.md  design.clean.md  design.md  design.minimal.md  design.pragmatic.md  plan.md  research.md  spec-checklist.md  spec.md  tasks.md
specs/templates/: plan-template.md  spec-checklist.md  spec-template.md  tasks-template.md
